fixed background alignment

--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,7 @@
     width: 50%;
 
     background-color: #1db954;
-    background-image: linear-gradient(156deg, #1db954 0%, #157d39 10%, #161616 100%);
+    background-image: linear-gradient(156deg, #157d39 0%, #157d39 50%, #0c5024 100%);
     
     border: 1px;
     border-color: #00531d;
@@ -12,7 +12,6 @@
 
     padding: 20px
    }
-
 
 
 #loginButton {
@@ -40,6 +39,7 @@
     padding: 4px;
 }
 
+
 #username{
     margin: auto;
     width: 90%;
@@ -57,9 +57,11 @@
     font-size: 15px;
 }
 
+
 #passwordInput{
     padding: 4px;
 }
+
 
 #password{
     margin: auto;
@@ -79,41 +81,37 @@
 }
 
 
-
-
 ::placeholder {
     color: #ffffff;
   }
 
 
-body {
+html, body {
     background-color: #1db954;
     background-image: linear-gradient(156deg, #1db954 0%, #157d39 10%, #161616 100%);
-}
 
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
 
 
 #textHeading{
-
-    
     font-size: 45px;
     text-align: center;
  
-
     border-radius: 12px;
     padding: 20px;
-
 }
-
-
-
 
 
 main {
     margin: auto;
     width: 50%;
     padding: 10px;
-
-
-    
   }
+
+
+
+
+
